correction affichage index version mobile

--- a/src/styles/slideshow.scss
+++ b/src/styles/slideshow.scss
@@ -65,5 +65,8 @@
 @media screen and (max-width:600px) {
     .slideshow-content {
         height:255px;
+        .slideshow-index{
+            display:none;
+        }
     }
 }
